[gd_scene load_steps=3 format=3 uid="uid://c83tysuqg6cji"]

[ext_resource type="Script" path="res://App/File/UpdateDemand/update_demand.gd" id="1_pwkst"]
[ext_resource type="StyleBox" uid="uid://250lcb4bmlfa" path="res://App/File/UpdateDemand/style_btn.tres" id="2_5ksv2"]

[node name="LoadSurvey" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pwkst")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 60

[node name="ReplaceDemandBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_5ksv2")
text = "Replace Student Demand"

[node name="AddDemandBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_5ksv2")
text = "Add to Student Demand"

[node name="ClearDemandBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_5ksv2")
text = "Clear Student Demand"

[node name="StatusMsg" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 48
text = "Status: "

[connection signal="pressed" from="MarginContainer/VBoxContainer/ReplaceDemandBtn" to="." method="_on_replace_demand_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddDemandBtn" to="." method="_on_add_demand_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ClearDemandBtn" to="." method="_on_clear_demand_btn_pressed"]
